--- a/Draw/Controller/Feedback/AboutUsController.xib
+++ b/Draw/Controller/Feedback/AboutUsController.xib
@@ -11,9 +11,11 @@
 			<string key="NS.object.0">1179</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
+			<string>IBUITextView</string>
 			<string>IBUIButton</string>
 			<string>IBUIImageView</string>
 			<string>IBUIView</string>
+			<string>IBUILabel</string>
 			<string>IBProxyObject</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
@@ -32,17 +34,17 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUIView" id="1061151986">
+			<object class="IBUIView" id="502016194">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIImageView" id="869046397">
-						<reference key="NSNextResponder" ref="1061151986"/>
+					<object class="IBUIImageView" id="643868262">
+						<reference key="NSNextResponder" ref="502016194"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 460}</string>
-						<reference key="NSSuperview" ref="1061151986"/>
+						<reference key="NSSuperview" ref="502016194"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="969716602"/>
+						<reference key="NSNextKeyView" ref="87350878"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -51,28 +53,28 @@
 							<string key="NSResourceName">wood_bg.png</string>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="969716602">
-						<reference key="NSNextResponder" ref="1061151986"/>
+					<object class="IBUIImageView" id="87350878">
+						<reference key="NSNextResponder" ref="502016194"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrameSize">{320, 460}</string>
-						<reference key="NSSuperview" ref="1061151986"/>
+						<string key="NSFrameSize">{320, 300}</string>
+						<reference key="NSSuperview" ref="502016194"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="798976411"/>
+						<reference key="NSNextKeyView" ref="569408159"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">paper.png</string>
+							<string key="NSResourceName">paper@2x.png</string>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="798976411">
-						<reference key="NSNextResponder" ref="1061151986"/>
+					<object class="IBUIImageView" id="569408159">
+						<reference key="NSNextResponder" ref="502016194"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 50}</string>
-						<reference key="NSSuperview" ref="1061151986"/>
+						<reference key="NSSuperview" ref="502016194"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="765704564"/>
+						<reference key="NSNextKeyView" ref="682222563"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -81,20 +83,20 @@
 							<string key="NSResourceName">topwood.png</string>
 						</object>
 					</object>
-					<object class="IBUIButton" id="765704564">
-						<reference key="NSNextResponder" ref="1061151986"/>
+					<object class="IBUIButton" id="682222563">
+						<reference key="NSNextResponder" ref="502016194"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 6}, {37, 37}}</string>
-						<reference key="NSSuperview" ref="1061151986"/>
+						<reference key="NSSuperview" ref="502016194"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="306816811"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUINormalTitle">Back</string>
-						<object class="NSColor" key="IBUIHighlightedTitleColor">
+						<object class="NSColor" key="IBUIHighlightedTitleColor" id="847731684">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -120,13 +122,50 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="319193971">
-						<reference key="NSNextResponder" ref="1061151986"/>
+					<object class="IBUITextView" id="86431694">
+						<reference key="NSNextResponder" ref="502016194"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{20, 82}, {280, 188}}</string>
+						<reference key="NSSuperview" ref="502016194"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="401127547"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC45NDk1MzIzOTA1IDEgMSAwAA</bytes>
+						</object>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<bool key="IBUIEditable">NO</bool>
+						<string type="base64-UTF8" key="IBUIText">UHJvZ3JhbSBCeQotLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLQpQSVBJ
+IFBlbmcKR2FteSBIdWFuZwpLaXJhIE91CgpEZXNpZ24gQnkKLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0t
+LS0tLS0tLS0tLS0tLS0tLS0tLS0KUm95Cg</string>
+						<object class="NSColor" key="IBUITextColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC40MjM1Mjk0MTE4IDAuMTkyMTU2ODYyNyAwLjAzMTM3MjU0OTAyAA</bytes>
+						</object>
+						<object class="IBUITextInputTraits" key="IBUITextInputTraits">
+							<int key="IBUIAutocapitalizationType">2</int>
+							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						</object>
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
+							<int key="type">1</int>
+							<double key="pointSize">14</double>
+						</object>
+						<object class="NSFont" key="IBUIFont">
+							<string key="NSName">Helvetica</string>
+							<double key="NSSize">14</double>
+							<int key="NSfFlags">16</int>
+						</object>
+					</object>
+					<object class="IBUIImageView" id="401127547">
+						<reference key="NSNextResponder" ref="502016194"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{63, 45}, {194, 40}}</string>
-						<reference key="NSSuperview" ref="1061151986"/>
+						<reference key="NSSuperview" ref="502016194"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="237823086"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -135,11 +174,81 @@
 							<string key="NSResourceName">paperclip.png</string>
 						</object>
 					</object>
+					<object class="IBUILabel" id="306816811">
+						<reference key="NSNextResponder" ref="502016194"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{102.5, 4}, {115, 36}}</string>
+						<reference key="NSSuperview" ref="502016194"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="86431694"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">7</int>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<string key="IBUIText">About us</string>
+						<reference key="IBUITextColor" ref="847731684"/>
+						<nil key="IBUIHighlightedColor"/>
+						<object class="NSColor" key="IBUIShadowColor">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MAA</bytes>
+						</object>
+						<string key="IBUIShadowOffset">{0, 1}</string>
+						<int key="IBUIBaselineAdjustment">0</int>
+						<float key="IBUIMinimumFontSize">10</float>
+						<int key="IBUITextAlignment">1</int>
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
+							<int key="type">1</int>
+							<double key="pointSize">23</double>
+						</object>
+						<object class="NSFont" key="IBUIFont">
+							<string key="NSName">Helvetica</string>
+							<double key="NSSize">23</double>
+							<int key="NSfFlags">16</int>
+						</object>
+					</object>
+					<object class="IBUILabel" id="237823086">
+						<reference key="NSNextResponder" ref="502016194"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{62, 308}, {196, 21}}</string>
+						<reference key="NSSuperview" ref="502016194"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">7</int>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<string key="IBUIText">CopyRight Sunny Orange</string>
+						<object class="NSColor" key="IBUITextColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC40MjM1Mjk0MTE4IDAuMTkyMTU2ODYyNyAwLjAzMTM3MjU0OTAyAA</bytes>
+						</object>
+						<nil key="IBUIHighlightedColor"/>
+						<object class="NSColor" key="IBUIShadowColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC45NDkwMTk2MDc4IDAuOTY0NzA1ODgyNCAwLjk2ODYyNzQ1MQA</bytes>
+						</object>
+						<string key="IBUIShadowOffset">{0, 1}</string>
+						<int key="IBUIBaselineAdjustment">0</int>
+						<float key="IBUIMinimumFontSize">10</float>
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
+							<int key="type">1</int>
+							<double key="pointSize">17</double>
+						</object>
+						<object class="NSFont" key="IBUIFont">
+							<string key="NSName">Helvetica</string>
+							<double key="NSSize">17</double>
+							<int key="NSfFlags">16</int>
+						</object>
+					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="869046397"/>
+				<reference key="NSNextKeyView" ref="643868262"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -157,14 +266,22 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">view</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="1061151986"/>
+						<reference key="destination" ref="502016194"/>
 					</object>
 					<int key="connectionID">15</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">aboutTitle</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="306816811"/>
+					</object>
+					<int key="connectionID">18</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickBack:</string>
-						<reference key="source" ref="765704564"/>
+						<reference key="source" ref="682222563"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -192,40 +309,58 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="1061151986"/>
+						<reference key="object" ref="502016194"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="765704564"/>
-							<reference ref="319193971"/>
-							<reference ref="798976411"/>
-							<reference ref="969716602"/>
-							<reference ref="869046397"/>
+							<reference ref="682222563"/>
+							<reference ref="401127547"/>
+							<reference ref="569408159"/>
+							<reference ref="87350878"/>
+							<reference ref="643868262"/>
+							<reference ref="306816811"/>
+							<reference ref="237823086"/>
+							<reference ref="86431694"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">10</int>
-						<reference key="object" ref="765704564"/>
-						<reference key="parent" ref="1061151986"/>
+						<reference key="object" ref="682222563"/>
+						<reference key="parent" ref="502016194"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">11</int>
-						<reference key="object" ref="319193971"/>
-						<reference key="parent" ref="1061151986"/>
+						<reference key="object" ref="401127547"/>
+						<reference key="parent" ref="502016194"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">12</int>
-						<reference key="object" ref="798976411"/>
-						<reference key="parent" ref="1061151986"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">13</int>
-						<reference key="object" ref="969716602"/>
-						<reference key="parent" ref="1061151986"/>
+						<reference key="object" ref="569408159"/>
+						<reference key="parent" ref="502016194"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
-						<reference key="object" ref="869046397"/>
-						<reference key="parent" ref="1061151986"/>
+						<reference key="object" ref="643868262"/>
+						<reference key="parent" ref="502016194"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">13</int>
+						<reference key="object" ref="87350878"/>
+						<reference key="parent" ref="502016194"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">17</int>
+						<reference key="object" ref="306816811"/>
+						<reference key="parent" ref="502016194"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">19</int>
+						<reference key="object" ref="237823086"/>
+						<reference key="parent" ref="502016194"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">20</int>
+						<reference key="object" ref="86431694"/>
+						<reference key="parent" ref="502016194"/>
 					</object>
 				</array>
 			</object>
@@ -239,19 +374,33 @@
 				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="20.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">16</int>
+			<int key="maxID">20</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
 					<string key="className">AboutUsController</string>
 					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">aboutTitle</string>
+						<string key="NS.object.0">UILabel</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">aboutTitle</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">aboutTitle</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/AboutUsController.h</string>
@@ -269,7 +418,7 @@
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="back.png">{16, 16}</string>
-			<string key="paper.png">{16, 16}</string>
+			<string key="paper@2x.png">{640, 960}</string>
 			<string key="paperclip.png">{16, 16}</string>
 			<string key="topwood.png">{16, 16}</string>
 			<string key="wood_bg.png">{16, 16}</string>
